feat: 팀 점수 계산 로직 구현